# apidelta

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json.bak  vercel.json
apps/api/: .dockerignore  Dockerfile  package.json
apps/api/prisma/: schema.prisma  seed-catalog.ts  seed-demo.ts  seed.ts
apps/api/scripts/: cleanup-noise.ts  smoke-github.ts  smoke-mcp.ts  smoke-parsers.ts  smoke-webhook.ts  start.sh  update-prod-sources.ts
apps/api/src/: app.module.ts  health.controller.ts  main.ts
apps/api/src/prisma/: prisma.service.ts
apps/ml/: .gitignore  Makefile  README.md  pyproject.toml
apps/ml/src/apidelta_ml/: __init__.py  cli.py  paths.py
apps/ml/src/apidelta_ml/data/: fetch_specs.py
apps/ml/tests/: conftest.py  test_cli.py  test_fetch_specs.py
apps/web/: .gitignore  components.json  next.config.ts  package.json  playwright.config.ts  vercel.json
apps/web/e2e/: auth.spec.ts  demo-capture.spec.ts  landing.spec.ts  navigation.spec.ts
apps/web/prisma/: schema.prisma
apps/web/scripts/: sync-schema.mjs
apps/web/src/: auth.ts  middleware.ts
apps/web/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts  sticky-cta.tsx  twitter-image.tsx
apps/web/src/lib/: alert-display.ts  api.ts  charts.tsx  components.tsx  demo-data.ts  dialogs.tsx  shared.ts  (+5 more)
docs/: TRACKER.md  audit-log.md  competitive-teardown.md  demo-gif-recording.md  deploy.md  known-issues.md  launch-strategy.md  plan.md  social-content.md  v2-tracker.md
(+96 files in other folders)
